# Gnucash-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: retail.json
docs/: releasing.md
examples/: forecast_assumptions.json
src/gnucash_cli/: __init__.py  analysis.py  cli.py  engine_backend.py  forecast.py  ledger_ops.py  ledger_reader.py  models.py  serialization.py  statements.py
tests/: conftest.py  fake_gnucash.py  test_analysis_forecast.py  test_cli_engine.py  test_cli_operations.py
