[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hep-gnucash-cli"
version = "0.1.0"
description = "HEP AI-callable JSON CLI for the official GnuCash engine."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Harry's Economics Program" }]
keywords = ["gnucash", "accounting", "finance", "cli", "agent", "postgresql"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.6.0"
]

[project.urls]
Homepage = "https://github.com/Harry-s-Economics-Program/Gnucash-CLI"
Repository = "https://github.com/Harry-s-Economics-Program/Gnucash-CLI"
Issues = "https://github.com/Harry-s-Economics-Program/Gnucash-CLI/issues"
Changelog = "https://github.com/Harry-s-Economics-Program/Gnucash-CLI/releases"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
hep-gnucash = "gnucash_cli.cli:main"
gnucash-agent = "gnucash_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gnucash_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
